@@ -8,10 +8,10 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.StringTokenizer;
 
-import org.apache.commons.collections.Closure;
 import org.w3c.dom.Element;
 
 import rustleund.nightdragon.framework.AbstractCommand;
+import rustleund.nightdragon.framework.Command;
 import rustleund.nightdragon.framework.GameState;
 import rustleund.nightdragon.framework.PlayerState;
 import rustleund.nightdragon.framework.util.AbstractCommandLoader;
@@ -21,17 +21,17 @@ import rustleund.nightdragon.framework.util.AbstractCommandLoader;
  */
 public class TestAnyFlagClosure extends AbstractCommand {
 
-	private List flagIds = null;
+	private List<Integer> flagIds = null;
 
-	private Closure successful = null;
+	private Command successful = null;
 
-	private Closure unsuccessful = null;
+	private Command unsuccessful = null;
 
 	public TestAnyFlagClosure(Element element) {
-		this.flagIds = new ArrayList();
+		this.flagIds = new ArrayList<Integer>();
 		StringTokenizer tokenizer = new StringTokenizer(element.getAttribute("ids"), ",");
 		while (tokenizer.hasMoreTokens()) {
-			this.flagIds.add(new Integer(tokenizer.nextToken()));
+			this.flagIds.add(Integer.valueOf(tokenizer.nextToken()));
 		}
 
 		this.successful = AbstractCommandLoader.loadChainedClosure((Element) element.getElementsByTagName("successful").item(0));
@@ -40,20 +40,13 @@ public class TestAnyFlagClosure extends AbstractCommand {
 		this.executeSuccessful = true;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.apache.commons.collections.Closure#execute(java.lang.Object)
-	 */
-	public void execute(Object arg0) {
-		GameState gameState = (GameState) arg0;
+	public void execute(GameState gameState) {
 		PlayerState playerState = gameState.getPlayerState();
 
 		boolean shouldExecuteSuccessfulClosure = false;
-		Iterator iter = this.flagIds.iterator();
+		Iterator<Integer> iter = this.flagIds.iterator();
 		while (!shouldExecuteSuccessfulClosure && iter.hasNext()) {
-			int thisFlagId = ((Integer) iter.next()).intValue();
-			shouldExecuteSuccessfulClosure = playerState.getFlagValue(thisFlagId);
+			shouldExecuteSuccessfulClosure = playerState.getFlagValue(iter.next());
 		}
 
 		if (shouldExecuteSuccessfulClosure) {
