@@ -10,10 +10,10 @@ import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.beanutils.PropertyUtils;
-import org.apache.commons.collections.Closure;
 import org.w3c.dom.Element;
 
 import rustleund.nightdragon.framework.AbstractCommand;
+import rustleund.nightdragon.framework.Command;
 import rustleund.nightdragon.framework.GameState;
 import rustleund.nightdragon.framework.PlayerState;
 import rustleund.nightdragon.framework.Scale;
@@ -24,7 +24,7 @@ import rustleund.nightdragon.framework.util.AbstractCommandLoader;
  */
 public class TestStatClosure extends AbstractCommand {
 
-	private static final Map VALUES_MAPPINGS = new HashMap();
+	private static final Map<String, List<Boolean>> VALUES_MAPPINGS = new HashMap<String, List<Boolean>>();
 
 	static {
 		VALUES_MAPPINGS.put("lessThan", Arrays.asList(new Boolean[] { Boolean.TRUE, Boolean.FALSE, Boolean.FALSE }));
@@ -35,15 +35,15 @@ public class TestStatClosure extends AbstractCommand {
 		VALUES_MAPPINGS.put("notEqual", Arrays.asList(new Boolean[] { Boolean.TRUE, Boolean.FALSE, Boolean.TRUE }));
 	}
 
-	private List acceptableValues = null;
+	private List<Boolean> acceptableValues = null;
 
-	private Comparable valueToCompare = null;
+	private Integer valueToCompare = null;
 
 	private String stat = null;
 
-	private Closure successful = null;
+	private Command successful = null;
 
-	private Closure unsuccessful = null;
+	private Command unsuccessful = null;
 
 	private boolean useInitialValue = false;
 
@@ -51,11 +51,11 @@ public class TestStatClosure extends AbstractCommand {
 
 		this.stat = element.getAttribute("stat");
 
-		for (Iterator iter = VALUES_MAPPINGS.keySet().iterator(); iter.hasNext();) {
-			String attributeTest = (String) iter.next();
+		for (Iterator<String> iter = VALUES_MAPPINGS.keySet().iterator(); iter.hasNext();) {
+			String attributeTest = iter.next();
 			if (element.hasAttribute(attributeTest)) {
-				this.acceptableValues = (List) VALUES_MAPPINGS.get(attributeTest);
-				this.valueToCompare = new Integer(element.getAttribute(attributeTest));
+				this.acceptableValues = VALUES_MAPPINGS.get(attributeTest);
+				this.valueToCompare = Integer.valueOf(element.getAttribute(attributeTest));
 				break;
 			}
 		}
@@ -67,30 +67,24 @@ public class TestStatClosure extends AbstractCommand {
 
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.apache.commons.collections.Closure#execute(java.lang.Object)
-	 */
-	public void execute(Object arg0) {
+	public void execute(GameState gameState) {
 		try {
-			GameState gameState = (GameState) arg0;
 			PlayerState playerState = gameState.getPlayerState();
 
 			Scale statScale = (Scale) PropertyUtils.getProperty(playerState, this.stat);
-			Comparable statValue = null;
+			Integer statValue = null;
 			if (this.useInitialValue) {
 				statValue = statScale.getUpperBound();
 			} else {
-				statValue = new Integer(statScale.getCurrentValue());
+				statValue = statScale.getCurrentValue();
 			}
 
 			boolean valueIsAcceptable = false;
 			int compareResult = statValue.compareTo(this.valueToCompare);
 
-			valueIsAcceptable |= ((Boolean) acceptableValues.get(0)).booleanValue() && (compareResult < 0);
-			valueIsAcceptable |= ((Boolean) acceptableValues.get(1)).booleanValue() && (compareResult == 0);
-			valueIsAcceptable |= ((Boolean) acceptableValues.get(2)).booleanValue() && (compareResult > 0);
+			valueIsAcceptable |= (acceptableValues.get(0)).booleanValue() && (compareResult < 0);
+			valueIsAcceptable |= (acceptableValues.get(1)).booleanValue() && (compareResult == 0);
+			valueIsAcceptable |= (acceptableValues.get(2)).booleanValue() && (compareResult > 0);
 
 			if (valueIsAcceptable) {
 				this.successful.execute(gameState);
